--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="main.js" defer></script>
 </head>
 <body>
-	<div class="coantainer">
+	<div class="container">
 		<div class="title">
 			<div class="toggle">
 				<h3>Calc</h3>
